flux/application/rsshub/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsshub
  labels:
    app: rsshub
    k8s.hydrahmlb.cc/schedule: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsshub
  template:
    metadata:
      labels:
        app: rsshub
    spec:
      containers:
        - name: rsshub
          # renovate: datasource=docker depName=ghcr.io/diygod/rsshub
          image: ghcr.io/diygod/rsshub:latest
          ports:
            - containerPort: 1200
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1200
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 1200
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: 512Mi
        - name: browserless
          # renovate: datasource=docker depName=browserless/chrome
          image: browserless/chrome:latest
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /pressure
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /pressure
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: 128Mi
        - name: puppeteer
          image: ghcr.io/hyoban/puppeteer-real-browser-hono:sha-6c6cbbc
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: 128Mi
